# tech_playground

./: .dockerignore  .env.dev  .gitignore  README.md  docker-compose.yml  dockerfile  main.py  manage.py  pyproject.toml  requirements.txt
app/: constants.py  middleware.py  models.py  pagination.py  serializers.py  tests.py  views.py
app/management/commands/: import_data.py
app/migrations/: 0001_initial.py
pinpeople/: asgi.py  settings.py  urls.py  wsgi.py
